--- a/pyproject-mini.toml
+++ b/pyproject-mini.toml
@@ -30,6 +30,7 @@ keywords = [
     "package-url",
     "purl",
 ]
+
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
@@ -45,6 +46,7 @@ classifiers = [
 ]
 
 dependencies = [
+    "licensedcode-index",
     "attrs >= 18.1,!=20.1.0;python_version<'3.11'",
     "attrs >= 22.1.0;python_version>='3.11'",
     "Beautifulsoup4 >= 4.0.0",
@@ -99,8 +101,15 @@ dependencies = [
 
 ]
 
+[project.urls]
+Homepage = "https://github.com/nexB/scancode-toolkit"
+
 
 [project.optional-dependencies]
+licenses = [
+    "licensecode-data",
+]
+
 # no impact but added for symmetry with the mini config
 full = [
     "extractcode[full] >= 31.0.0",
@@ -136,10 +145,6 @@ docs = [
     "sphinx-rtd-dark-mode>=1.3.0",
     "sphinx-copybutton",
 ]
-
-
-[project.urls]
-Homepage = "https://github.com/nexB/scancode-toolkit"
 
 
 [tool.bumpversion]
@@ -193,7 +198,6 @@ sdist_extra_includes = [
     "tests/**/*",
     ".gitattributes",
     ".gitignore",
-    "thirdparty/**/*",
     "*.LICENSE",
     "NOTICE",
     "*.ABOUT",
