--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ classifiers = [
 ]
 
 dependencies = [
+    "licensedcode-index",
     "attrs >= 18.1,!=20.1.0;python_version<'3.11'",
     "attrs >= 22.1.0;python_version>='3.11'",
     "Beautifulsoup4 >= 4.0.0",
@@ -104,6 +105,10 @@ Homepage = "https://github.com/nexB/scancode-toolkit"
 
 
 [project.optional-dependencies]
+licenses = [
+    "licensecode-data",
+]
+
 # no impact but added for symmetry with the mini config
 full = [
     "extractcode[full] >= 31.0.0",
@@ -139,7 +144,6 @@ docs = [
     "sphinx-rtd-dark-mode>=1.3.0",
     "sphinx-copybutton",
 ]
-
 
 
 [tool.bumpversion]
