--- a/pyproject-licensedcode-data.toml
+++ b/pyproject-licensedcode-data.toml
@@ -6,9 +6,9 @@ build-backend = "flot.buildapi"
 name = "licensedcode-data"
 version = "32.1.0"
 description = "A packaging of the ScanCode licensedb license and license rules database."
+long_description_content_type = "text/x-rst"
+readme = "src/licensedcode/data/README.rst"
 license = { text = "Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft" }
-# TODO consider a readme?
-# readme = "README.rst"
 authors = [
     { name = "nexB. Inc. and others", email = "info@aboutcode.org" },
 ]
@@ -33,11 +33,12 @@ Homepage = "https://github.com/nexB/scancode-toolkit"
 wheel_path_prefixes_to_strip = [ "src" ]
 
 includes = [
-    "src/licensedcode/data/*",
+    "src/licensedcode/data/**/*",
+    "src/licensedcode/README.rst",
 ]
 
 excludes = [
-    "src/licensedcode/data/cache/*",
+    "src/licensedcode/data/cache/**/*",
 ]
 
 metadata_files = [
