--- a/pyproject-licensedcode-index.toml
+++ b/pyproject-licensedcode-index.toml
@@ -6,9 +6,9 @@ build-backend = "flot.buildapi"
 name = "licensedcode-index"
 version = "32.1.0"
 description = "A packaging of the ScanCode licensedb license and license rules pre-built index. Can only be used with ScanCode-Toolkit."
+long_description_content_type = "text/x-rst"
+readme = "src/licensedcode/data/README.rst"
 license = { text = "Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft" }
-# TODO consider a readme?
-# readme = "README.rst"
 authors = [
     { name = "nexB. Inc. and others", email = "info@aboutcode.org" },
 ]
@@ -33,7 +33,11 @@ Homepage = "https://github.com/nexB/scancode-toolkit"
 wheel_path_prefixes_to_strip = [ "src" ]
 
 includes = [
-    "src/licensedcode/data/cache/*",
+    "src/licensedcode/data/cache/**/*",
+    "src/licensedcode/data/cc-by-4.0.LICENSE",
+    "src/licensedcode/data/scancode-data.ABOUT",
+    "src/licensedcode/README.rst",
+    "src/licensedcode/data/README.rst",
 ]
 
 metadata_files = [
