--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ packages = [
 ]
 
 testing = [
+    "flot",
     "pytest >= 6, != 7.0.0",
     "pytest-xdist >= 2",
     "aboutcode-toolkit >= 7.0.2",
@@ -167,6 +168,9 @@ includes = [
 ]
 
 excludes = [
+    # these are now provided by separate, smaller packages
+    "src/licensedcode/data/**/*",
+
     # Python compiled files
     "**/*.py[cod]",
     "**/*.egg-info",
