--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,6 +171,11 @@ excludes = [
     # these are now provided by separate, smaller packages
     "src/licensedcode/data/**/*",
 
+    # scancode_toolkit.egg-info is only for editable local config
+    "src/scancode_toolkit.egg-info/**/*",
+
+    "docs/build/**/*",
+
     # Python compiled files
     "**/*.py[cod]",
     "**/*.egg-info",
@@ -195,10 +200,10 @@ editable_paths = [ "src", "tests" ]
 
 sdist_extra_includes = [
     "etc/**/*",
-    "docs/**/*",
+    # "docs/**/*",
     ".github/**/*",
-    "samples/**/*",
-    "tests/**/*",
+    # "samples/**/*",
+    #"tests/**/*",
     ".gitattributes",
     ".gitignore",
     "*.LICENSE",
