Revert changes to chef.py
    * Do not relaunch shell in x86 mode when using configure or scancode on Mac
    * Create new test for Package listing without RPM or Windows Package parsers
    * Update setup-mini.cfg with new extra_requires for system provided plugins

Signed-off-by: Jono Yang <jyang@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -125,6 +125,11 @@ full =
     typecode[full] >= 30.0.0
     extractcode[full] >= 31.0.0
 
+system_provided =
+    typecode_libmagic-system-provided
+    extractcode_7z_system_provided
+    extractcode_libarchive_system_provided
+
 testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
