--- a/pyproject-packagedcode.toml
+++ b/pyproject-packagedcode.toml
@@ -81,17 +81,6 @@ dependencies = [
 ]
 
 
-[project.optional-dependencies]
-full = [
-# we still need all these deps and clenup is needed
-#from licensedcode
-#from summarycode
-#from textcode
-#from typecode
-]
-
-
-
 [project.urls]
 Homepage = "https://github.com/nexB/scancode-toolkit"
 
@@ -102,6 +91,14 @@ packages = [
     "rpm_inspector_rpm >= 4.16.1.3; platform_system == 'Linux'",
     "regipy >= 3.1.0; platform_system == 'Linux'",
     "packagedcode_msitools >= 0.101.210706; platform_system == 'Linux'",
+]
+
+full = [
+# TODO: we still need all these deps and clenup is needed
+#from licensedcode
+#from summarycode
+#from textcode
+#from typecode
 ]
 
 
