--- a/pyproject-packagedcode-models.toml
+++ b/pyproject-packagedcode-models.toml
@@ -3,9 +3,9 @@ requires = [ "flot>=0.7.0" ]
 build-backend = "flot.buildapi"
 
 [project]
-name = "packagedcode"
+name = "packagedcode-models"
 version = "32.1.0"
-description = "PackagedCode is a library to parse and normalize package manifests, lockfiles and dependencies for all type of app and system packages and report them by PURL."
+description = "PackagedCode Models is a library with core models of package manifests, lockfiles and dependencies for all type of app and system packages keyed by PURL."
 license = { text = "Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft" }
 # TODO consider a readme?
 # readme = "README.rst"
@@ -16,18 +16,10 @@ authors = [
 keywords = [
     "open source",
     "scan",
-    "license",
     "package",
     "dependency",
-    "copyright",
-    "filetype",
-    "author",
-    "extract",
-    "licensing",
     "sca",
     "SBOM",
-    "spdx",
-    "cyclonedx",
     "package-url",
     "purl",
 ]
@@ -106,7 +98,7 @@ full = [
 wheel_path_prefixes_to_strip = [ "src" ]
 
 includes = [
-    "src/packagedcode/**/*",
+    "src/packagedcode/models.py",
 ]
 
 excludes = [
@@ -138,11 +130,7 @@ sdist_extra_includes = [
     ".gitignore",
     "*.LICENSE",
     "NOTICE",
-    "*.ABOUT",
-    "*packagedcode*.toml",
-    "*.yml",
     "*.rst",
-    "*.py",
 
     "requirements*",
 ]
