--- a/tests/licensedcode/data/datadriven/external/glc/GFDL-1.1.t4.yml
+++ b/tests/licensedcode/data/datadriven/external/glc/GFDL-1.1.t4.yml
@@ -1,5 +1,5 @@
 license_expressions:
-  - gfdl-1.1
+  - gfdl-1.1-invariants-only
 notes: |
   License test derived from a file of the BSD-licensed repository at:
   https://raw.githubusercontent.com/google/licensecheck/v0.3.1/testdata/GFDL-1.1.t4
