Improve copyright detection side-effects
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libc-bin/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libc-bin/copyright-detailed.expected.yml
@@ -803,6 +803,7 @@ copyright: |
   copyright Eric Young
   Copyright (c) 1992 Eric Young Collected
   copyright Simon Josefsson
+  copyright The Internet Society, Tom Tromey and Red Hat, Inc.
   Copyright (c) 2002, 2003, 2004, 2011 Simon Josefsson
   Copyright (c) 1999, 2000 Tom Tromey
   Copyright 2000 Red Hat, Inc.
