Improve handle of parens in copyright
Also improve NOTICEs, and other misc. variants
Don not detect "The Initial Developer"

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/libcdio10-libcdio.label.yml
+++ b/tests/cluecode/data/copyrights/libcdio10-libcdio.label.yml
@@ -20,7 +20,7 @@ copyrights:
   - Copyright (c) 1985, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1996, 1997, 1998, 1999,
     2000 Free Software Foundation, Inc.
   - Copyright (c) 2003 Matthias Drochner
-  - Copyright (c) 1998-2001 VideoLAN Johan Bilien <jobi@via.ecp.fr> and Gildas Bazin <gbazin@netcourrier.com>
+  - Copyright (c) 1998-2001 VideoLAN ( Johan Bilien <jobi@via.ecp.fr> and Gildas Bazin <gbazin@netcourrier.com> )
   - Copyright (c) 1992, 1993 Eric Youngdale
   - Copyright (c) 2003, 2004, 2005, 2006, 2007, 2008 Rocky Bernstein and Herbert Valerio Riedel
 holders:
