--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -70,7 +70,7 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode >= 31.0.3
+    commoncode >= 31.2.1
     container-inspector >= 31.0.0
     debian-inspector >= 31.1.0
     dparse2 >= 0.7.0
@@ -126,9 +126,9 @@ full =
     extractcode[full] >= 31.0.0
 
 system_provided =
-    typecode_libmagic-system-provided
-    extractcode_7z_system_provided
-    extractcode_libarchive_system_provided
+    typecode_libmagic-system-provided >= 32.0.0
+    extractcode_7z_system_provided >= 32.0.0
+    extractcode_libarchive_system_provided >= 32.0.0
 
 testing =
     pytest >= 6, != 7.0.0
