--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,7 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode >= 31.0.3
+    commoncode >= 31.2.1
     container-inspector >= 31.0.0
     debian-inspector >= 31.1.0
     dparse2 >= 0.7.0
@@ -112,9 +112,8 @@ install_requires =
     xmltodict >= 0.11.0
     zipp >= 3.0.0; python_version < "3.9"
     typecode >= 30.0.1
-    typecode[full] >= 30.0.1
-    extractcode[full] >= 31.0.0
-
+    typecode[full] >= 30.0.1; sys_platform != "darwin" and platform_machine != "arm64"
+    extractcode[full] >= 31.0.0; sys_platform != "darwin" and platform_machine != "arm64"
 
 [options.packages.find]
 where = src
@@ -124,6 +123,13 @@ where = src
 full =
     typecode[full] >= 30.0.0
     extractcode[full] >= 31.0.0
+
+system_provided =
+    typecode >= 30.0.1
+    extractcode >= 31.0.0
+    typecode_libmagic_system_provided >= 32.0.0
+    extractcode_7z_system_provided >= 32.0.0
+    extractcode_libarchive_system_provided >= 32.0.0
 
 testing =
     pytest >= 6, != 7.0.0
