--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-intel-sound.copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-intel-sound.copyright-detailed.expected.yml
@@ -8,10 +8,10 @@ declared_license_expression: intel AND intel AND (intel AND (bsd-new AND other-p
   AND delorie-historical AND intel-osl-1993)
 declared_license_expression_spdx: LicenseRef-scancode-intel AND LicenseRef-scancode-intel AND
   (LicenseRef-scancode-intel AND (BSD-3-Clause AND LicenseRef-scancode-other-permissive AND
-  LicenseRef-scancode-other-copyleft) AND BSD-3-Clause AND dtoa AND SMLNJ AND LicenseRef-scancode-amd-historical
-  AND SunPro AND HP-1986 AND LicenseRef-scancode-nilsson-historical AND LicenseRef-scancode-newlib-historical
+  LicenseRef-scancode-other-copyleft) AND BSD-3-Clause AND dtoa AND SMLNJ AND AMD-newlib AND
+  SunPro AND HP-1986 AND LicenseRef-scancode-nilsson-historical AND LicenseRef-scancode-newlib-historical
   AND BSD-2-Clause AND LicenseRef-scancode-x11-hanson AND LicenseRef-scancode-delorie-historical
-  AND LicenseRef-scancode-intel-osl-1993)
+  AND HPND-Intel)
 other_license_expression:
 other_license_expression_spdx:
 license_detections:
@@ -124,10 +124,10 @@ license_detections:
       AND x11-lucent AND standard-ml-nj AND amd-historical AND sunpro AND hp-1986 AND nilsson-historical
       AND newlib-historical AND bsd-simplified AND x11-hanson AND delorie-historical AND intel-osl-1993
     license_expression_spdx: LicenseRef-scancode-intel AND (BSD-3-Clause AND LicenseRef-scancode-other-permissive
-      AND LicenseRef-scancode-other-copyleft) AND BSD-3-Clause AND dtoa AND SMLNJ AND LicenseRef-scancode-amd-historical
+      AND LicenseRef-scancode-other-copyleft) AND BSD-3-Clause AND dtoa AND SMLNJ AND AMD-newlib
       AND SunPro AND HP-1986 AND LicenseRef-scancode-nilsson-historical AND LicenseRef-scancode-newlib-historical
       AND BSD-2-Clause AND LicenseRef-scancode-x11-hanson AND LicenseRef-scancode-delorie-historical
-      AND LicenseRef-scancode-intel-osl-1993
+      AND HPND-Intel
     matches:
       - license_expression: intel
         spdx_license_expression: LicenseRef-scancode-intel
@@ -308,7 +308,7 @@ license_detections:
           ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF
           THIS SOFTWARE.
       - license_expression: amd-historical
-        spdx_license_expression: LicenseRef-scancode-amd-historical
+        spdx_license_expression: AMD-newlib
         from_file:
         start_line: 236
         end_line: 247
@@ -449,7 +449,7 @@ license_detections:
           (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
           THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       - license_expression: amd-historical
-        spdx_license_expression: LicenseRef-scancode-amd-historical
+        spdx_license_expression: AMD-newlib
         from_file:
         start_line: 343
         end_line: 354
@@ -721,7 +721,7 @@ license_detections:
           This file is distributed WITHOUT ANY WARRANTY; without even the implied
           warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
       - license_expression: intel-osl-1993
-        spdx_license_expression: LicenseRef-scancode-intel-osl-1993
+        spdx_license_expression: HPND-Intel
         from_file:
         start_line: 563
         end_line: 585
