--- a/tests/cluecode/data/ics/libvpx-examples-includes-PHP-Markdown-Extra-1.2.3/markdown.php.yml
+++ b/tests/cluecode/data/ics/libvpx-examples-includes-PHP-Markdown-Extra-1.2.3/markdown.php.yml
@@ -3,10 +3,10 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 2004-2008 Michel Fortin http //www.michelf.com/projects/php-markdown
+  - Copyright (c) 2004-2008 Michel Fortin
   - Copyright (c) 2004-2006 John Gruber
-  - Copyright (c) 2004-2008 Michel Fortin <http //www.michelf.com />
-  - Copyright (c) 2003-2006 John Gruber <http //daringfireball.net />
+  - Copyright (c) 2004-2008 Michel Fortin http://www.michelf.com
+  - Copyright (c) 2003-2006 John Gruber http://daringfireball.net
 holders:
   - Michel Fortin
   - John Gruber
